--- a/avocado.ipynb
+++ b/avocado.ipynb
@@ -2,13 +2,183 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2015-12-27</th>\n",
+       "      <th>1.33</th>\n",
+       "      <th>64236.62</th>\n",
+       "      <th>1036.74</th>\n",
+       "      <th>54454.85</th>\n",
+       "      <th>48.16</th>\n",
+       "      <th>8696.87</th>\n",
+       "      <th>8603.62</th>\n",
+       "      <th>93.25</th>\n",
+       "      <th>0.0</th>\n",
+       "      <th>conventional</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>Albany</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-12-20</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>54876.98</td>\n",
+       "      <td>674.28</td>\n",
+       "      <td>44638.81</td>\n",
+       "      <td>58.33</td>\n",
+       "      <td>9505.56</td>\n",
+       "      <td>9408.07</td>\n",
+       "      <td>97.49</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Albany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-12-13</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>118220.22</td>\n",
+       "      <td>794.70</td>\n",
+       "      <td>109149.67</td>\n",
+       "      <td>130.50</td>\n",
+       "      <td>8145.35</td>\n",
+       "      <td>8042.21</td>\n",
+       "      <td>103.14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Albany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-12-06</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>78992.15</td>\n",
+       "      <td>1132.00</td>\n",
+       "      <td>71976.41</td>\n",
+       "      <td>72.58</td>\n",
+       "      <td>5811.16</td>\n",
+       "      <td>5677.40</td>\n",
+       "      <td>133.76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Albany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-11-29</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>51039.60</td>\n",
+       "      <td>941.48</td>\n",
+       "      <td>43838.39</td>\n",
+       "      <td>75.78</td>\n",
+       "      <td>6183.95</td>\n",
+       "      <td>5986.26</td>\n",
+       "      <td>197.69</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Albany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2015-11-22</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>55979.78</td>\n",
+       "      <td>1184.27</td>\n",
+       "      <td>48067.99</td>\n",
+       "      <td>43.61</td>\n",
+       "      <td>6683.91</td>\n",
+       "      <td>6556.47</td>\n",
+       "      <td>127.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Albany</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   2015-12-27  1.33   64236.62  1036.74   54454.85   48.16  8696.87  8603.62  \\\n",
+       "0                                                                              \n",
+       "1  2015-12-20  1.35   54876.98   674.28   44638.81   58.33  9505.56  9408.07   \n",
+       "2  2015-12-13  0.93  118220.22   794.70  109149.67  130.50  8145.35  8042.21   \n",
+       "3  2015-12-06  1.08   78992.15  1132.00   71976.41   72.58  5811.16  5677.40   \n",
+       "4  2015-11-29  1.28   51039.60   941.48   43838.39   75.78  6183.95  5986.26   \n",
+       "5  2015-11-22  1.26   55979.78  1184.27   48067.99   43.61  6683.91  6556.47   \n",
+       "\n",
+       "    93.25  0.0  conventional  2015  Albany  \n",
+       "0                                           \n",
+       "1   97.49  0.0  conventional  2015  Albany  \n",
+       "2  103.14  0.0  conventional  2015  Albany  \n",
+       "3  133.76  0.0  conventional  2015  Albany  \n",
+       "4  197.69  0.0  conventional  2015  Albany  \n",
+       "5  127.44  0.0  conventional  2015  Albany  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./avocado.csv', index_col = 0, skiprows = 1)\n",
+    "df.head()"
    ]
   },
   {
